Fix pjax progress bar not visible on community theme

--- a/static/less/progress.less
+++ b/static/less/progress.less
@@ -20,5 +20,5 @@
 //
 #nprogress .bar {
     height:2px;
-    background: @primary;
+    background: @info;
 }
